[project]
name = "the-code-cartographer"
version = "0.1.0"
description = "AI Agents for codebase mapping"
dependencies = [
    "pydantic",
    "networkx",
    "langgraph",
    "sqlglot",
    "tree-sitter<0.22.0",
    "tree-sitter-languages",
    "pytest"
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
